--- a/blog/post1/index.mdx
+++ b/blog/post1/index.mdx
@@ -2,6 +2,10 @@
 title: "My First Post"
 date: "2021-07-23"
 slug: "my-first-post"
+hero_image: "./hero.jpg"
+hero_image_alt: "First post"
+hero_image_credit_text: "usgs"
+hero_image_credit_link: "https://unsplash.com/photos/"
 ---
 
 This is my first blog post! Isn't it *great*?
